<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/llamar"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/llamar" />
        <item
            android:id="@+id/enviarSms"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/enviar_sms" />
        <item
            android:id="@+id/enviarEmail"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/enviar_email" />
        <item
            android:id="@+id/visitarWebBlog"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/visitarWebBlog" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
